--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,13 @@
                             <use xlink:href="#icon-add"></use>
                         </svg>
                     </div>
-                    <div class="icon-Text"> 新增网站 </div>
+                    <div class="icon-Text"> 添加网站</div>
                 </div>
             </li>
         </ul>
     </main>
 
-    <script src="//at.alicdn.com/t/font_2461395_no3bo3bpt9k.js"></script>
+    <script src="//at.alicdn.com/t/font_2461395_ahqge3xozk9.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./main.js"></script>
 
